@startuml 04_Validator_Mapper_Parser
!include 00_Styling.puml
!include 02_Repository_Layer.puml
!include 03_Service_Layer.puml
skinparam shadowing false
skinparam classAttributeIconSize 0

package "Mapper Layer" {

    interface DepotMapper {
        + toDTO(entity: Depot): DepotDTO
        + toDTOList(entities: List<Depot>): List<DepotDTO>
        + toEntity(dto: DepotInputDTO, branch: Branch): Depot
        + toEngineDTO(entity: Depot): EngineDepotDTO
    }

    interface VehicleTypeMapper {
        + toDTO(entity: VehicleType): VehicleTypeDTO
        + toDTOList(entities: List<VehicleType>): List<VehicleTypeDTO>
        + toEntity(dto: VehicleTypeInputDTO): VehicleType
        + toEngineDTO(entity: VehicleType): EngineVehicleTypeDTO
    }

    interface VehicleMapper {
        + toDTO(entity: Vehicle): VehicleDTO
        + toDTOList(entities: List<Vehicle>): List<VehicleDTO>
        + toEntity(dto: VehicleInputDTO): Vehicle
        + toEngineDTO(entity: Vehicle): EngineVehicleDTO
        + updateEntityFromDTO(dto, entity)
    }

    interface FleetMapper {
        + toDTO(entity: Fleet): FleetDTO
        + toDTOList(entities: List<Fleet>): List<FleetDTO>
        + toEntity(dto: FleetInputDTO, branch: Branch): Fleet
    }

    interface OrderMapper {
        + toDTO(entity: Order): OrderDTO
        + toDTOList(entities: List<Order>): List<OrderDTO>
        + toEntity(dto: OrderInputDTO, b: Branch, date: LocalDate): Order
        + toEngineDTO(entity: Order): EngineOrderDTO
    }

    interface RouteStopMapper {
        + toDTO(entity: RouteStop): StopDetailResponseDTO
        + toDTOList(entities: List<RouteStop>): List<StopDetailResponseDTO>
    }

    interface RouteMapper {
        + toDTO(entity: Route): RouteDetailResponseDTO
        + toDTOList(entities: List<Route>): List<RouteDetailResponseDTO>
    }

    interface SolutionMapper {
        + toDTO(entity: Solution): SolutionDetailResponseDTO
    }

    class OptimizationJobMapper {
        + toDTO(job: OptimizationJob): OptimizationJobDTO
        + toEntity(dto: OptimizationJobDTO): OptimizationJob
        - calculateElapsedSeconds(job): Long
        - calculateRemainingSeconds(job): Integer
    }

    class GeometryMapper {
        + pointToLatitude(point: Point): Double
        + pointToLongitude(point: Point): Double
        + createPoint(lat, lng): Point
    }

    class OptimizationConfigMapper {
        + toEngineConfig(userPrefs): OptimizationConfig
        - mapSpeed(speed, engineConfig)
        - mapGoal(goal, engineConfig)
    }
}

' ============================================
' USAGE RELATIONSHIPS
' ============================================

' GeometryMapper is used by almost everything with locations
DepotMapper ..> GeometryMapper : uses
OrderMapper ..> GeometryMapper : uses
RouteStopMapper ..> GeometryMapper : uses

' Fleet depends on Vehicle
FleetMapper ..> VehicleMapper : uses

' Solution hierarchy
SolutionMapper ..> RouteMapper : uses
RouteMapper ..> RouteStopMapper : uses

' Vehicle context
VehicleMapper ..> VehicleTypeMapper : references

' Optimization Job components
OptimizationJobMapper ..> SolutionMapper : references

@enduml